--- a/produtos/index.html
+++ b/produtos/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <title>Cadastro de Produtos</title>
+    <link rel="stylesheet" type="text/css" href="produtos.css">
 </head>
 <body>
+    <div id="login-container">
     <div class="container">
         <h1>Cadastrar Produtos</h1>
         <form id="cadastroForm">
@@ -20,7 +22,7 @@
         </form>
          <a href="http://localhost:3003/" id="cadastrarButton">Acessar estoque</a>
     </div>
-
+</div>
     <script>
         document.getElementById('cadastroForm').addEventListener('submit', function(event) {
             event.preventDefault();
@@ -45,6 +47,13 @@
                 alert('Ocorreu um erro ao cadastrar produto');
                 console.error(error);
             });
+            fetch('/nome-usuario')
+            .then(response => response.json())
+            .then(data => {
+                const nomeUsuario = data.nomeUsuario;
+                document.getElementById('nome-usuario').innerText = `Usuário Logado: ${nomeUsuario}`;
+            })
+            .catch(error => console.error('Erro ao obter nome do usuário:', error));
         });
     </script>
 </body>
